// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel fixed renders correctly 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  position: fixed;
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  right: 0;
  border-left: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel renders block when visible 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  left: 0;
  border-right: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;
